Implemented User Entity and Endpoints. Closes #82. Closes #84